--- a/clara.html
+++ b/clara.html
@@ -670,7 +670,7 @@
 
   <section id="playlistSection">
     <div class="playlist-visual">
-      <img src="imgs/spoti.jpg" Portada de la playlist class="portada-playlist" />
+      <img src="imgs/spoti.jpg" alt="Portada de la playlist" class="portada-playlist" />
       <h2>Nuestra playlist 💖</h2>
       <p>Un lugar donde vamos a ir poniendo las canciones que nos haga acordar al otro...</p>
       <a href="https://open.spotify.com/playlist/3CkPOAGJjwmKTyPQq74I1S?si=ee8d58fc0a7f492b&pt=06b847cbaddfce153ed57aff80c46a2a" target="_blank" class="boton-playlist">
@@ -762,7 +762,7 @@
 
   <section class="album-viajes">
     <h2>¿Estás lista para completar este álbum? 🌍📸</h2>
-    <p class="contador">
+    <p class="contador"> 
       Países visitados: <span id="contador">0</span> / 60
       <button id="sumarExtra" title="Sumar país extra">+</button>
     </p>
@@ -899,7 +899,7 @@
   <section class="regalo">
     <h2>🎀 Regalo Oculto</h2>
     <p>Si queres conseguir nuevos regalos click aca:</p>
-    <a href="Novia.pdf" target="_blank">
+      <a href="Novia.pdf" target="_blank">
         <button>Examen Sorpresa</button>
       </a>  
     </section>
