--- a/clara.html
+++ b/clara.html
@@ -899,7 +899,7 @@
   <section class="regalo">
     <h2>🎀 Regalo Oculto</h2>
     <p>Si queres conseguir nuevos regalos click aca:</p>
-      <a href="Novia.pdf" target="_blank">
+      <a href="docs/Novia.pdf" target="_blank">
         <button>Examen Sorpresa</button>
       </a>  
     </section>
@@ -937,7 +937,7 @@
 
     if (password === "Claripuchi") {
       // Redirige al archivo PDF (o lo abre en nueva pestaña)
-      window.open("Cupones.pdf", "_blank");
+      window.open("docs/Cupones.pdf", "_blank");
       mensaje.textContent = "";
     } else {
       mensaje.textContent = "Contraseña incorrecta. Intentá de nuevo ❤️";
