--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
   position: absolute;
   top: 0; left: 0;
   width: 100%; height: 100%;
-  background-image: url("https://i.imgur.com/9BU5ZPZ.png"); /* Corazones pequeños */
+  background-color: #ad1457;
   background-size: 80px;
   background-repeat: repeat;
   opacity: 0.2;
@@ -380,7 +380,7 @@
 
 .album-viajes {
   padding: 60px 20px;
-  background: url('https://i.imgur.com/y7msW4x.png'); /* fondo de sellos de pasaporte */
+  background-color: white
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
